// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={300}
      createdAt={0}
      description="coffee"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={200}
      createdAt={-345600000}
      description="donut"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={3500}
      createdAt={345600000}
      description="juice"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render no expense with empty ExpenseList 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        no expenses
      </span>
    </div>
  </div>
</div>
`;
